# Cinnamon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  compile_benches.sh  exp-fig-11.sh  exp-fig-12.sh  justfile  setup.sh
cinnamon/: .gitignore  CMakeLists.txt  README.md  justfile  run_test.sh
cinnamon/benchmarks/: .gitignore  Makefile  va.mlir
cinnamon/benchmarks/apps/: va.cpp
cinnamon/benchmarks/lib/bench/: testbench.hpp
cinnamon/benchmarks/lib/host/: binary_path.h  host_lib.c  host_lib.h
cinnamon/cmake/: MLIRUtils.cmake
cinnamon/dialectTemplate/: justfile
cinnamon/dialectTemplate/templateFiles/include/: CMakeLists.txt
cinnamon/dialectTemplate/templateFiles/lib/Conversion/: PassDetails.h
cinnamon/dialectTemplate/templateFiles/lib/Dialect/: CMakeLists.txt
cinnamon/include/: CMakeLists.txt
cinnamon/include/cinm-mlir/Conversion/: CMakeLists.txt  CimPasses.h  CimPasses.td  CinmPasses.h  CinmPasses.td  CnmPasses.h  CnmPasses.td  CommonPatterns.h  HbmpimPasses.td  UPMEMPasses.h
cinnamon/include/cinm-mlir/Conversion/CimToMemristor/: CimToMemristor.h
cinnamon/include/cinm-mlir/Conversion/CnmToGPU/: CnmToGPU.h
cinnamon/include/cinm-mlir/Conversion/CnmToHbmpim/: CnmToHbmpim.h
cinnamon/include/cinm-mlir/Conversion/TorchToCinm/: TorchToCinm.h
cinnamon/include/cinm-mlir/Conversion/UPMEMToLLVM/: UPMEMToLLVM.h
cinnamon/include/cinm-mlir/Dialect/: CMakeLists.txt
cinnamon/include/cinm-mlir/Dialect/Cinm/: CMakeLists.txt
cinnamon/include/cinm-mlir/Dialect/Cnm/: CMakeLists.txt
cinnamon/include/cinm-mlir/Dialect/Hbmpim/: CMakeLists.txt
cinnamon/include/cinm-mlir/Utils/: CinmUtils.h
cinnamon/lib/Conversion/: CMakeLists.txt  CommonPatterns.cpp  PassDetails.h
cinnamon/lib/Conversion/CimToMemristor/: CMakeLists.txt  CimToMemristor.cpp
cinnamon/lib/Conversion/CinmToCim/: CMakeLists.txt  CinmToCim.cpp
cinnamon/lib/Conversion/CinmToCnm/: CinmToCnm.cpp
cinnamon/lib/Conversion/CnmToGPU/: CnmToGPU.cpp
cinnamon/lib/Conversion/CnmToHbmpim/: CMakeLists.txt  CnmToHbmpim.cpp
cinnamon/lib/Conversion/CnmToUPMEM/: CnmToUPMEM.cpp
cinnamon/lib/Conversion/MemristorToFunc/: MemristorToFunc.cpp
cinnamon/lib/Conversion/TorchToCinm/: TorchToCinm.cpp
cinnamon/lib/Conversion/UPMEMToLLVM/: CMakeLists.txt  UPMEMToLLVM.cpp
cinnamon/lib/Dialect/: CMakeLists.txt
cinnamon/lib/Dialect/Cim/IR/: CMakeLists.txt  (+1 more)
cinnamon/lib/Dialect/Cnm/: CMakeLists.txt
cinnamon/lib/Utils/: CinmUtils.cpp
cinnamon/runtime/: CMakeLists.txt  upmem_rt.c  upmem_rt.h
cinnamon/runtime/Memristor/: CMakeLists.txt  cpu_executor.cpp  executor.cpp  executor_interface.hpp  runtime_c_interface.cpp
cinnamon/runtime/Upmem/: upmem_rt.c  upmem_rt.h
cinnamon/samples/: asdf.mlir  cnm_conv.mlir  contract.mlir  gemm_cnm.mlir  llama2.cpp  transformer.cnm.mlir  transformer.cnm.opt.mlir  transformer.ll  transformer.llvm.mlir  transformer.mlir  transformer.upmem.c  transformer.upmem.mlir  vector_add_big_cnm.mlir
cinnamon/samples/cost_model/: cinm_gemv.mlir  cinm_gemv_after.mlir  cinm_gemv_mid.mlir
cinnamon/samples/dorado/: dorado.cpp  dorado.mlir
cinnamon/samples/hbmpim/: cnm.mlir  cnm_gemv.mlir  cnm_va.mlir  hbmpim_va.mlir  lowered_va.mlir  test.mlir  test2.mlir  test3.mlir  va.mlir  va_first_hbmpim.mlir  va_hbmpim.mlir
cinnamon/samples/multi-head-attention/: big_linalg.mlir  multi_head_attention.py  multi_head_linalg.mlir  test_multihead.py
cinnamon/test/Conversion/CimToMemristor/: cim-to-memristor-multi-tile.mlir  cim-to-memristor.mlir
cinnamon/test/Conversion/CinmToCim/: cinm-to-cim.mlir
cinnamon/test/Conversion/CinmToCnm/: cinm-to-cnm.mlir
cinnamon/test/Conversion/MemristorToFunc/: memristor-to-func.mlir
cinnamon/test/Conversion/TorchToCinm/: torch-to-cinm.mlir
cinnamon/test/Dialect/Cim/: cim-ops.mlir
cinnamon/test/Dialect/Cinm/: cinm-ops.mlir  cinm-tiling.mlir
cinnamon/test/Dialect/Cnm/: cnm-ops.mlir  cnm-transform.mlir  linalg-tile.mlir  transform-expand-dim.mlir  transform-matmul-schedule-linalg.mlir  transform-matmul-schedule.mlir  transform-normalize-buffers.mlir  transform-peel-right.mlir  transform-schedule.mlir
cinnamon/test/Dialect/Memristor/: memristor-ops.mlir
cinnamon/test/Dialect/UPMEM/: upmem-ops.mlir
cinnamon/test/Python/: cinm_backend.py  cinm_backend_i16.py  linalg_backend.py
cinnamon/test/Transform/Cim/: cim-schedule-alap.mlir  cim-schedule-asap.mlir
cinnamon/testbench/: 1mm.mlir  2mm.mlir  Makefile  conv.mlir  gemm.mlir  get_results.py  mlp.mlir  mv.mlir  va.mlir  va.upmem.mlir
cinnamon/testbench/apps/: 1mm.cpp  2mm.cpp  3mm.cpp  conv.cpp  mlp.cpp  mv.cpp  va.cpp
cinnamon/testbench/lib/: compile_dpu.sh
cinnamon/testbench/lib/bench/: testbench.hpp
cinnamon/testbench/lib/dpu/: dpu_lib.h  expf.c
cinnamon/testbench/lib/host/: host_lib.c  host_lib.h
cinnamon/testbench/prim/RED/: Makefile
cinnamon/tools/: CMakeLists.txt
cinnamon/tools/cinm-lsp-server/: CMakeLists.txt  cinm-lsp-server.cpp
cinnamon/tools/cinm-opt/: CMakeLists.txt  cinm-opt.cpp
cinnamon/tools/cinm-vulkan-runner/: cinm-vulkan-runner.cpp
include/cinm-mlir/Dialect/Cim/: CMakeLists.txt
include/cinm-mlir/Dialect/Cnm/: CMakeLists.txt
include/cinm-mlir/Dialect/UPMEM/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt  CommonPatterns.cpp  PassDetails.h
lib/Conversion/CimToMemristor/: CMakeLists.txt  CimToMemristor.cpp
lib/Conversion/CinmToCim/: CMakeLists.txt
lib/Conversion/CinmToCnm/: CMakeLists.txt  CinmToCnm.cpp
lib/Conversion/CnmToGPU/: CMakeLists.txt  CnmToGPU.cpp
lib/Conversion/CnmToUPMEM/: CMakeLists.txt  CnmToUPMEM.cpp
lib/Conversion/MemristorToFunc/: CMakeLists.txt  MemristorToFunc.cpp
lib/Conversion/TorchToCinm/: CMakeLists.txt  TorchToCinm.cpp
lib/Conversion/UPMEMToLLVM/: CMakeLists.txt  ToLLVMInterfaceImpl.cpp  UPMEMToLLVM.cpp
python/: .gitignore  pyproject.toml
python/src/cinnamon/torch_backend/: compiled_model.py  exceptions.py  linalg_on_tensor.py
tools/cinm-opt/: CMakeLists.txt  cinm-opt.cpp
tools/cinm-translate/: CMakeLists.txt  cinm-translate.cpp
tools/cinm-vulkan-runner/: CMakeLists.txt  cinm-vulkan-runner.cpp
(+403 files in other folders)
