################################################################################
# CimIncGen
#
# MLIR Cim dialect generated includes.
################################################################################

add_custom_target(CimIncGen)

# Attributes, Dialect, Operations and Types.
add_subdirectory(IR)
add_subdirectory(Transforms)
