################################################################################
# CnmIncGen
#
# MLIR Cnm dialect generated includes.
################################################################################

add_custom_target(CnmIncGen)

# Attributes, Dialect, Operations and Types.
add_subdirectory(IR)
add_subdirectory(Transforms)
