################################################################################
# UPMEMIncGen
#
# MLIR UPMEM dialect generated includes.
################################################################################

add_custom_target(UPMEMIncGen)

# Attributes, Dialect, Operations and Types.
add_subdirectory(IR)
add_subdirectory(Transforms)
