################################################################################
# HbmpimIncGen
#
# MLIR Hbmpim dialect generated includes.
################################################################################

add_custom_target(HbmpimIncGen)

# Attributes, Dialect, Operations and Types.
add_subdirectory(IR)
# add_subdirectory(Transforms)
