################################################################################
# MemristorIncGen
#
# MLIR Memristor dialect generated includes.
################################################################################

add_custom_target(MemristorIncGen)

# Attributes, Dialect, Operations and Types.
add_subdirectory(IR)
add_subdirectory(Transforms)
