################################################################################
# ${dialectNameUpper}IncGen
#
# MLIR ${dialectNameUpper} dialect generated includes.
################################################################################

add_custom_target(${dialectNameUpper}IncGen)

# Attributes, Dialect, Operations and Types.
add_subdirectory(IR)
